--- a/registro.html
+++ b/registro.html
@@ -42,10 +42,6 @@
                     <input type="text" id="dni" placeholder="Ingresa tu número de DNI" maxlength="8">
                     <div class="error-message" id="error-dni"></div>
                 </div>
-                <div class="form-group form-group--checkbox">
-                    <input type="checkbox" id="acumularPuntos">
-                    <label for="acumularPuntos">Acumular puntos Bonus</label>
-                </div>
                 <div class="form-group">
                     <label for="celular">Número celular</label>
                     <input type="text" id="celular" placeholder="Ingresa tu número celular" maxlength="9">
@@ -69,7 +65,7 @@
                 </div>
                 <div class="form-group form-group--checkbox">
                     <input type="checkbox" id="autorizarTratamiento">
-                    <label for="autorizarTratamiento">Autorizo el tratamiento de mis datos para fines de prospección y promoción comercial por parte de Burger King y sus Empresas Vinculadas</label>
+                    <label for="autorizarTratamiento">Autorizo el tratamiento de mis datos para fines de prospección y promoción comercial por parte de Don Burger y sus Empresas Vinculadas</label>
                 </div>
 
                 <button type="submit" class="registro-button">Registrarme</button>
