--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#slider">Inicio</a></li>
         <li><a href="menu.html">Promociones</a></li>
         <li><a href="menu.html">Menú</a></li>
-        <li><a href="registro.html">Reguistro</a></li>
+        <li><a href="registro.html">Registro</a></li>
         <li><a href="locales.html">Locales</a></li>
       </ul>
     </nav>
